INFRA/kustomize/shelfware/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-shelfware
  labels:
    istio-injection: enabled
