INFRA/kustomize/shelfware/overlays/prod/backend-resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            cpu: "215m"
            memory: "200Mi"
          limits:
            cpu: "270m"
            memory: "250Mi"
